# mishas-magical-calendar-revealer

./: .gitignore  Cargo.toml  logs
hb-templates/: calendar.hbs  index.hbs  try_again.hbs
src/: calendar.rs  index.rs  main.rs  try_again.rs
